--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -43,3 +43,4 @@ jobs:
         uses: anothrNick/github-tag-action@1.71.0
         env:
           DEFAULT_BUMP: 'patch'
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
