--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,16 +31,23 @@ jobs:
           start: npm run start:test
           wait-on: http://localhost:5000
       - name: deploy
-        if: ${{ github.event_name == 'push' }}
-        run: curl ${{ secrets.RENDER_DEPLOY_HOOK }}
+        env:
+          deploy_url: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
+          IS_PUSH: ${{ github.event_name == 'push' }}
+          CONTAINS_SKIP: ${{ contains(join(toJson(github.event.commits.*.message)), '#skip') }}
+        if: ${{ env.IS_PUSH && env.CONTAINS_SKIP == 'false' }}
+        run: |
+          curl "$deploy_url"
   tag_release:
     needs: [deployment_pipeline]
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v4
       - name: Bump Version and Push Tag
-        if: ${{ github.event_name == 'push' }}
         uses: anothrNick/github-tag-action@1.71.0
         env:
           DEFAULT_BUMP: 'patch'
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CONTAINS_SKIP: ${{ contains(join(toJson(github.event.commits.*.message)), '#skip') }}
+          IS_PUSH: ${{ github.event_name == 'push' }}
+        if: ${{ env.IS_PUSH && env.CONTAINS_SKIP == 'false' }}
