--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,15 +33,16 @@ jobs:
       - name: deploy
         env:
           IS_PUSH: ${{ github.event_name == 'push' }}
+          IS_NOT_PR_OPEN: ${{ github.event.action != 'opened' }}
           CONTAINS_SKIP: ${{ contains(join(toJson(github.event.commits.*.message)), '#skip') }}
           RENDER_DEPLOY_HOOK: ${{ secrets.RENDER_DEPLOY_HOOK }}
-        if: ${{ env.IS_PUSH && env.CONTAINS_SKIP == 'false' }}
+        if: ${{ env.IS_NOT_PR_OPEN && env.IS_PUSH && env.CONTAINS_SKIP == 'false' }}
         run: curl ${{ env.RENDER_DEPLOY_HOOK }}
 
   discord_notifications:
     needs: [deployment_pipeline]
     runs-on: ubuntu-20.04
-    if: ${{ always() }}
+    if: ${{ always() && github.ref == 'refs/heads/main' }}
     steps:
       - name: Success notification
         uses: stegzilla/discord-notify@v4
@@ -72,4 +73,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CONTAINS_SKIP: ${{ contains(join(toJson(github.event.commits.*.message)), '#skip') }}
           IS_PUSH: ${{ github.event_name == 'push' }}
-        if: ${{ env.IS_PUSH && env.CONTAINS_SKIP == 'false' }}
+          IS_NOT_PR_OPEN: ${{ github.event.action != 'opened' }}
+        if: ${{ env.IS_NOT_PR_OPEN && env.IS_PUSH && env.CONTAINS_SKIP == 'false' }}
