--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -52,7 +52,7 @@ jobs:
           message: "**User:** ${{ github.actor }}\n**Link:** https://shorturl.at/7rirS\n**Commit**: https://github.com/${{ github.actor }}/full-stack-open-pokedex/commit/${{ github.event.commit.url }}"
           colour: "#a5db5e"
           webhook_url: ${{ secrets.DISCORD_WEBHOOK }}
-        if: ${{ steps.deploy_step.outcome == 'success' }}
+        if: ${{ needs.steps.deploy_step.outcome == 'success' }}
       - name: Error notification
         uses: stegzilla/discord-notify@v4
         with:
@@ -60,12 +60,12 @@ jobs:
           message: "**User:** ${{ github.actor }}\n**Commit**: https://github.com/${{ github.actor }}/full-stack-open-pokedex/commit/${{ github.event.commit.url }}"
           colour: "#d93d3f"
           webhook_url: ${{ secrets.DISCORD_WEBHOOK }}
-        if: ${{ steps.deploy_step.outcome == 'failure' }}
+        if: ${{ needs.steps.deploy_step.outcome == 'failure' }}
 
   tag_release:
     needs: [deployment_pipeline]
     runs-on: ubuntu-20.04
-    if: ${{ steps.deploy_step.outcome == 'success' }}
+    if: ${{ needs.steps.deploy_step.outcome == 'success' }}
     steps:
       - uses: actions/checkout@v4
       - name: Bump Version and Push Tag
