--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,11 +33,12 @@ jobs:
       - name: deploy
         id: deploy_step
         env:
+          NOT_PR: ${{ github.event_name != 'pull_request' }}
           IS_PUSH: ${{ github.event_name == 'push' }}
           IS_MAIN: ${{ github.ref == 'refs/heads/main' }}
           CONTAINS_SKIP: ${{ contains(join(toJson(github.event.commits.*.message)), '#skip') }}
           RENDER_DEPLOY_HOOK: ${{ secrets.RENDER_DEPLOY_HOOK }}
-        if: ${{ success() && env.CONTAINS_SKIP == 'false' && env.IS_MAIN && env.IS_PUSH }}
+        if: ${{ success() && env.NOT_PR && env.CONTAINS_SKIP == 'false' && env.IS_MAIN && env.IS_PUSH }}
         run: curl ${{ env.RENDER_DEPLOY_HOOK }}
 
   discord_notifications:
