exercise 11.18 (success notification text)

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,18 +32,12 @@ jobs:
           wait-on: http://localhost:5000
       - name: deploy
         env:
+          IS_MAIN: ${{ github.ref == 'refs/heads/main' }}
           IS_PUSH: ${{ github.event_name == 'push' }}
-          IS_NOT_PR_OPEN: ${{ github.event.action != 'opened' }}
           CONTAINS_SKIP: ${{ contains(join(toJson(github.event.commits.*.message)), '#skip') }}
           RENDER_DEPLOY_HOOK: ${{ secrets.RENDER_DEPLOY_HOOK }}
-        if: ${{ env.IS_NOT_PR_OPEN && env.IS_PUSH && env.CONTAINS_SKIP == 'false' }}
+        if: ${{ success() && env.CONTAINS_SKIP == 'false' && env.IS_MAIN && env.IS_PUSH }}
         run: curl ${{ env.RENDER_DEPLOY_HOOK }}
-
-  discord_notifications:
-    needs: [deployment_pipeline]
-    runs-on: ubuntu-20.04
-    if: ${{ always() && github.ref == 'refs/heads/main' }}
-    steps:
       - name: Success notification
         uses: stegzilla/discord-notify@v4
         with:
@@ -51,7 +45,7 @@ jobs:
           message: "**User:** ${{ github.actor }}\n**Link:** https://shorturl.at/7rirS\n**Commit**: https://github.com/${{ github.actor }}/full-stack-open-pokedex/commit/${{ github.event.commit.url }}"
           colour: "#a5db5e"
           webhook_url: ${{ secrets.DISCORD_WEBHOOK }}
-        if: ${{ needs.deployment_pipeline.result == 'success' }}
+        if: ${{ success() }}
       - name: Error notification
         uses: stegzilla/discord-notify@v4
         with:
@@ -59,7 +53,7 @@ jobs:
           message: "**User:** ${{ github.actor }}\n**Commit**: https://github.com/${{ github.actor }}/full-stack-open-pokedex/commit/${{ github.event.commit.url }}"
           colour: "#d93d3f"
           webhook_url: ${{ secrets.DISCORD_WEBHOOK }}
-        if: ${{ needs.deployment_pipeline.result == 'failure' }}
+        if: ${{ failure() }}
 
   tag_release:
     needs: [deployment_pipeline]
@@ -69,9 +63,9 @@ jobs:
       - name: Bump Version and Push Tag
         uses: anothrNick/github-tag-action@1.71.0
         env:
-          DEFAULT_BUMP: 'patch'
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          CONTAINS_SKIP: ${{ contains(join(toJson(github.event.commits.*.message)), '#skip') }}
+          DEFAULT_BUMP: 'patch'
+          IS_MAIN: ${{ github.ref == 'refs/heads/main' }}
           IS_PUSH: ${{ github.event_name == 'push' }}
-          IS_NOT_PR_OPEN: ${{ github.event.action != 'opened' }}
-        if: ${{ env.IS_NOT_PR_OPEN && env.IS_PUSH && env.CONTAINS_SKIP == 'false' }}
+          CONTAINS_SKIP: ${{ contains(join(toJson(github.event.commits.*.message)), '#skip') }}
+        if: ${{ env.CONTAINS_SKIP == 'false' && env.IS_MAIN && env.IS_PUSH }}
