fix invalid workflow in pipeline_prod

--- a/.github/workflows/pipeline_prod.yml
+++ b/.github/workflows/pipeline_prod.yml
@@ -55,7 +55,7 @@ jobs:
 
 
   tag_release:
-    needs: [deployment_pipeline]
+    needs: [deployment_pipeline_prod]
     runs-on: ubuntu-20.04
     if: ${{ needs.steps.deploy_step.outcome == 'success' }}
     steps:
